--- a/css/main-footer.css
+++ b/css/main-footer.css
@@ -34,3 +34,29 @@ font-weight: 700;
 .footerContent .quick-links ul li, .footerContent .contact-us ul li{
     margin-bottom: .5rem;
 }
+
+
+    /* footer-------------------- */
+    footer .footerContent {
+        grid-template-columns: repeat(4, 1fr);
+        gap: 2rem;
+    }
+
+    footer .footerContent .footer-head {
+        /* grid-column: 1/2; */
+        text-align: left;
+        display: grid;
+        gap: 1rem;
+    }
+
+    footer .footerContent .footer-head img {
+        margin: 0;
+
+    }
+
+    footer .footerContent .copyright {
+        grid-column: 1/ span 4;
+        text-align: center;
+
+        margin-top: 2rem;
+    }
