--- a/css/search-result.css
+++ b/css/search-result.css
@@ -27,15 +27,18 @@ body {
     padding: 1rem;
     margin: 1.5rem 1rem;
     display: grid;
-    grid-template-columns: 2fr 3fr;
+    grid-template-columns: 1fr;
     gap: 1rem;
 }
 
 .search-wrapper {
-    display: flex;
-    flex-flow: row nowrap;
-    flex-direction: row-reverse;
+    display: grid;
+    grid-template-columns: 1fr;
     gap: 1rem;
+    border: 1px solid rgb(213, 213, 213);
+    box-shadow: #797979 2px 5px 10px;
+    border-radius: 25px;
+    padding: 1rem;
 }
 
 .artist-descp {
@@ -49,12 +52,12 @@ body {
 
 .images {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     flex: 1;
 }
 
 .images img:nth-of-type(1) {
-    grid-column: 1/-1;
+    grid-column: 1/3;
     grid-row: 1/3;
     width: auto;
 }
@@ -189,10 +192,6 @@ main .top-btn img {
         padding: 0.5rem;
     }
 
-    .mainContent {
-        grid-template-columns: 1fr;
-    }
-
     .artist-descp,
     .artist-work {
         border: 1px solid rgb(213, 213, 213);
@@ -210,5 +209,14 @@ main .top-btn img {
     .albumBtn {
         bottom: 40px;
         right: 30px;
+    }
+
+    .search-wrapper {
+        border: unset;
+        box-shadow: unset;
+        border-radius: unset;
+        grid-template-columns: 2fr 3fr;
+        gap: 1rem;
+        grid-template-rows: 1fr;
     }
 }
