--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,4 +1,4 @@
-:root{
+:root {
     --gradient: linear-gradient(to bottom, #111415, #363a47);
     --primary-clr: rgb(56, 56, 56);
     --secondary-clr: #89023E;
@@ -7,116 +7,567 @@
     --blacl-clr: black;
 }
 
+
 body {
+    font-family: Arial, sans-serif;
+    background-color: white;
+    color: #fff;
     margin: 0;
     padding: 0;
-    display: flex;
-    min-height: 100vh;
-    flex-flow: column nowrap;
+
 }
 
-.main-wrapper {
+header {
     display: flex;
-    flex-flow: column nowrap;
+    justify-content: space-between;
     align-items: center;
-    min-width: 60%;
-    gap: 1.2rem;
-    align-items: center;
-    justify-content: center;
+    padding: 20px 20px;
+    background-color: #1A1A1A;
 }
 
-
-main {
-    max-width: 1200px;
-    margin: auto;
-    text-align: center;
-    padding: 1rem;
+.logo {
     display: flex;
-    flex-flow: column nowrap;
     align-items: center;
-    justify-content: center;
 }
 
-#logoutBtn {
-    padding: 10px;
-    margin-top: 20px;
-    cursor: pointer;
-    font-weight: bold;
+.logo img {
+    height: 40px;
+    margin-right: 10px;
 }
 
-#portfolioBtn {
-    padding: 10px;
-    margin-top: 20px;
-    cursor: pointer;
-    font-weight: bold;
-}
-
-#user {
-    font-size: 1.5rem;
-    text-transform: capitalize;
-    font-weight: bold;
-    color: tomato;
-}
-
-
-/* ============================= */
-/* Add styles for the search bar */
-.search-container {
+nav ul {
+    list-style: none;
     display: flex;
-    flex-flow: row wrap;
-    gap: 0.5rem;
-    margin-top: 2rem;
-    min-width: 60%;
+    gap: 20px;
+    margin: 0;
+    padding: 0;
 }
 
-.search-container input[type=text] {
+nav ul li {
+    display: inline;
+}
+
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
+    padding: 5px 10px;
+    border-radius: 5px;
+}
+
+nav ul li a.active,
+nav ul li a:hover {
+    background-color: #d1455d;
+}
+
+.hero {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 40px;
+}
+
+.hero-text {
+    max-width: 100%;
+}
+
+.hero-text h1 {
+    font-size: 3em;
+    color: #F37F81;
+}
+
+.hero-text h2 {
+    font-size: 2em;
+    margin: 10px 0;
+}
+
+.hero-text p {
+    font-size: 1.2em;
+    margin: 40px 0;
+}
+
+.explore-button {
+    background-color: #F37F81;
+    color: black;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 25px;
+    font-size: 1.2em;
+    border: none;
+}
+
+.hero-image {
+    max-width: 50%;
+
+}
+
+
+.img {
+    width: 100%;
+}
+
+/* why us section */
+
+.why-us-section {
+    padding: 50px 80px;
+}
+
+.why-us-section .container {
+    text-align: start;
+}
+
+.why-us-section h2 {
+    font-size: 3em;
+    margin-bottom: 40px;
+    color: #F37F81;
+
+}
+
+.cards {
+    display: flex;
+    justify-content: space-between;
+    gap: 40px;
+    flex-wrap: wrap;
+}
+
+.card {
+    background-color: var(--accent-clr);
+    padding: 50px 40px;
+    border-radius: 10px;
     flex: 1;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    padding: 8px;
+    width: 20%;
+    text-align: center;
+    color: "white";
 }
 
-.search-container button {
-    padding: 8px 12px;
-    background: var(--accent-clr);
+.card img {
+    max-width: 50%;
+    margin-bottom: 20px;
+}
+
+.card h3 {
+    font-size: 1.5em;
+    margin-bottom: 10px;
+}
+
+.card p {
+    font-size: 1em;
+    margin: 0;
+}
+
+/* hero cards */
+
+.event-hero {
+    font-size: 1.5rem;
+    text-align: center;
+
+}
+
+.hero h1 span {
+    color: #F37F9A;
+}
+
+.event-cards {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    gap: 20px;
+    padding: 20px;
+}
+
+.event-card {
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+    padding: 80px 0px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    flex: 1;
+    width: 20%;
+    text-align: center;
+    margin-bottom: 20px;
+    position: relative;
+    overflow: hidden;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.event-card::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: linear-gradient(to bottom, rgba(231, 84, 106, 0.5), rgba(255, 182, 193, 0) 90%);
+    z-index: 1;
+}
+
+.bachelorette-card {
+    background-image: url('../src/Rectangle 23.png');
+    /* Replace with actual image path */
+}
+
+.newyear-card {
+    background-image: url('../src/newyear.png');
+    /* Replace with actual image path */
+}
+
+.birthday-card {
+    background-image: url('../src/birthday.png');
+    /* Replace with actual image path */
+}
+
+.corporate-card {
+    background-image: url('../src/party.png');
+    /* Replace with actual image path */
+}
+
+.card-content {
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    position: relative;
+    z-index: 2;
+}
+
+.event-card h2 {
+    font-size: 20px;
+    margin: 20px 0 10px;
+}
+
+.event-card p {
+    font-size: 16px;
+}
+
+.event-card button {
+    background-color: #F37F81;
     color: white;
+    padding: 5px 20px;
+    text-decoration: none;
+    border-radius: 25px;
+    font-size: .8em;
+    border: none;
+    transition: background-color 0.3s ease;
+}
+
+.event-card button:hover {
+    background-color: #d62828;
+}
+
+
+@media (max-width: 768px) {
+    .event-card {
+        min-width: 80%;
+
+    }
+}
+
+/* banner section */
+
+.container {}
+
+.header {
+    background-color: #ffffff;
+    text-align: center;
+    padding: 80px 0;
+    color: black;
+    font-size: 2rem;
+}
+
+.header h2 {
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 20px;
+    color: black;
+}
+
+.header h2 span {
+    color: #F37F9A;
+    /* Pink color */
+}
+
+.stats {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 40px;
+}
+
+.stat {
+    text-align: center;
+}
+
+.stat-number {
+    font-size: 2.5rem;
+    font-weight: bold;
+    color: #F37F9A;
+    /* Pink color */
+}
+
+.stat-label {
+    color: black;
+    /* Gray color */
+}
+
+.artists {
+    background: linear-gradient(to right, #4a5568, #1a202c);
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.artist-info {
+    width: 45%;
+    padding: 0 20px;
+
+}
+
+.artist-info h3 {
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 20px;
+
+}
+
+.artist-info p {
+    margin-bottom: 30px;
+}
+
+.artist-image {
+    width: 50%;
+    /* Adjust for spacing between elements */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.artist-image img {
+    max-width: 65%;
+    /* Ensure image fits within container */
+    border-radius: 8px
+}
+
+.explore-btn {
+    background-color: #e63946;
+    /* Pink color */
+    color: #ffffff;
+    padding: 12px 24px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    font-size: 16px;
-    margin-left: 5px;
+    font-size: 1rem;
+    transition: background-color 0.3s ease;
 }
 
-.search-container button:hover {
-    background: var(--secondary-clr);
-
+.explore-btn:hover {
+    background-color: #d62828;
+    /* Darker pink color on hover */
 }
 
-.search-suggestions {
+/* our clients */
+
+.div-container {
+    width: 90%;
+    max-width: 1200px;
     display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    padding: 20px;
+    /* Optional: Add padding to the container */
+    background-color: #ffffff;
+    /* Optional: Background color for demonstration */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);/
+}
+
+.div-container .image-div {
+    width: 250px;
+    height: 250px;
+    background-size: cover;
+    background-position: center;
+    margin-bottom: 20px;
+}
+
+.our-clients {
+    font-size: 3rem;
+    color: #F37F9A;
+    margin: 50px 80px;
+}
+
+.image-div:nth-child(1) {
+    background-image: url('../src/Rectangle 633.png');
+}
+
+.image-div:nth-child(2) {
+    background-image: url('../src/Rectangle 634.png');
+}
+
+.image-div:nth-child(3) {
+    background-image: url('../src/Rectangle 636.png');
+}
+
+.image-div:nth-child(4) {
+    background-image: url('../src/Rectangle 637.png');
+}
+
+.image-div:nth-child(5) {
+    background-image: url('../src/Untitled-1.png');
+}
+
+@media (max-width: 768px) {
+    .div-container .image-div {
+        width: calc(50% - 20px);
+    }
+}
+
+
+/* testomonial section */
+.testimonial-container {
+    width: 80%;
+    /* Adjust width as needed */
+    max-width: 1200px;
+    /* Optional: Set a max-width if desired */
+    margin: 0 auto;
+    /* Centering horizontally with auto margins */
+    padding: 20px;
+    /* Optional: Add padding to the container */
+    background-color: #ffffff;
+    /* Optional: Background color for demonstration */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    /* Optional: Box shadow for container */
+}
+
+.testimonial {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px;
+    /* Increased padding for space */
+    border-radius: 8px;
+    /* Rounded corners */
+    background-color: #AB2D4F;
+    /* Background color for content side */
+    color: #ffffff;
+    /* Text color for content side */
+    margin-bottom: 20px;
+    /* Space between testimonials */
+}
+
+.testimonial-content {
+    flex: 1;
+    margin-left: 30px;
+    /* Increased margin for space */
+}
+
+.testimonial-content h3 {
+    color: #ff69b4;
+    /* Pink color for headings */
+    margin-bottom: 10px;
+}
+
+.testimonial-content p {
+    margin-bottom: 10px;
+}
+
+.testimonial-content .author {
+    color: #ff69b4;
+    /* Pink color for author name */
+    font-style: italic;
+}
+
+.testimonial-image {
+    width: 30%;
+    /* Increased image width */
+    height: 100%;
+    /* Increased image height */
+
+    overflow: hidden;
+    background-color: #ff69b4;
+    /* Pink background color for image side */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.testimonial-image img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+@media (max-width: 768px) {
+    .testimonial {
+        flex-direction: column;
+        align-items: flex-start;
+        text-align: left;
+        padding: 20px;
+        /* Adjusted padding for smaller screens */
+    }
+
+    .testimonial-image {
+        width: 120px;
+        /* Adjusted image width for smaller screens */
+        height: 120px;
+        /* Adjusted image height for smaller screens */
+        margin-bottom: 20px;
+    }
+
+    .testimonial-content {
+        margin-left: 0;
+        margin-top: 20px;
+        /* Space between image and content on smaller screens */
+    }
+}
+
+/* footer */
+
+footer {
+    background: linear-gradient(to bottom, #111415, #363a47);
+    color: var(--white-clr);
+    padding: 1rem;
+}
+
+.footerContent {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 2rem;
+}
+
+.footerContent a {
+    color: var(--white-clr);
+}
+
+.footerContent .footer-head {
     text-align: center;
-    justify-content: center;
-    align-items: center;
+    grid-column: span 2;
 }
 
-.search-suggestions ul {
-    display: flex;
-    flex-flow: row wrap;
-    gap: 0.75rem;
-    align-items: center;
-    margin: 0 2rem;
-    justify-content: center;
-    max-width: 60%;
+.footerContent .footer-head img {
+    margin: auto;
+    width: 70px;
 }
 
-.search-suggestions ul li {
-    border: 1px solid rgb(157, 152, 152);
-    padding: 0.5rem 1rem;
-    border-radius: 30px;
+.footerContent .footer-head .icons ul li {
+    display: inline;
+    margin: .3rem;
 }
 
-.search-suggestions ul li:hover {
-    background-color: var(--secondary-clr);
-    color: white;
-    cursor: pointer;
+.footerContent .copyright {
+    grid-column: span 2;
+    text-align: center;
 }
+
+.footerContent .quick-links p,
+.footerContent .contact-us p {
+    font-weight: 700;
+}
+
+.footerContent .quick-links ul li,
+.footerContent .contact-us ul li {
+    margin-bottom: .5rem;
+}
+
+/* ================================== */
