--- a/templates/search-result-artist-template.html
+++ b/templates/search-result-artist-template.html
@@ -12,9 +12,9 @@
                 </div>
     
                 <ul>
-                    <li>Pricing starts at: <span>$ 125</span></li>
-                    <li>Pick me for: <span>Rock and Jazz</span></li>
-                    <li>Location: <span>Vancouvver, BC</span></li>
+                    <li>Pricing starts at: <span id="pricing">$ 125</span></li>
+                    <li>Pick me for: <span id="category">Rock and Jazz</span></li>
+                    <li>Location: <span id="location">Vancouvver, BC</span></li>
                 </ul>
     
             </div>
