--- a/css/homepage.css
+++ b/css/homepage.css
@@ -18,7 +18,7 @@ body {
 }
 
 header {
-    width: 100%;
+    max-width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
