--- a/css/account-artist.css
+++ b/css/account-artist.css
@@ -55,17 +55,16 @@ header .site-heading img {
     width: 50px;
     height: auto;
 }
-
-.headerContent .navbar {
+.headerContent .navbar{
     position: relative;
 }
 
 
-nav {
+nav{
     display: none;
 }
 
-nav ul li a:hover {
+nav ul li a:hover{
     color: var(--accent-clr);
     border-bottom: 1px solid var(--accent-clr);
     transition: all .5s;
@@ -135,43 +134,37 @@ main .mainContent {
 }
 
 main .mainContent .artist-descp {
+    border: 1px solid rgb(213, 213, 213);
+    box-shadow: #797979 2px 5px 10px;
     border-radius: 25px;
-    display: flex;
-    flex-flow: column nowrap;
-    gap: 1rem;
+    padding: 1rem;
+    margin-bottom: 1.5rem;
 }
 
-.mainContent .about-artist {
-    box-shadow: grey 2px 2px 10px;
-    border-radius: 25px;
-    padding: 2rem 1rem;
-    align-content: flex-start;
-}
-
-main .mainContent .artist-briefing img {
+main .mainContent .artist-descp .artist-briefing img {
     width: 80px;
     height: 80px;
     object-fit: cover;
     border-radius: 50%;
 }
 
-.mainContent .artist-briefing {
+.mainContent .artist-descp .artist-briefing {
     display: flex;
     flex-flow: row nowrap;
     gap: 1rem;
     align-items: center;
 }
 
-main .mainContent .icons-grp {
+main .mainContent .artist-descp .icons-grp {
     text-align: end;
     color: var(--secondary-clr);
 }
 
-main .mainContent .about-artist ul li {
+main .mainContent .artist-descp .about-artist ul li {
     font-family: oswald;
 }
 
-main .mainContent .about-artist ul li span {
+main .mainContent .artist-descp .about-artist ul li span {
     font-family: 'Nunito Sans';
 }
 
@@ -180,12 +173,12 @@ main .mainContent .artist-descp .artist-perf h3 {
     font-weight: normal;
 }
 
-main .mainContent .artist-perf p {
+main .mainContent .artist-descp .artist-perf p {
     border-bottom: 1px solid var(--accent-clr);
     padding-bottom: 1rem;
 }
 
-main .mainContent .artist-perf a {
+main .mainContent .artist-descp .artist-perf a {
     display: flex;
     flex-flow: column wrap;
     align-items: center;
@@ -198,7 +191,7 @@ main .mainContent .artist-perf a {
     border-radius: 25px;
 }
 
-.mainContent .artist-perf a.edit {
+.mainContent .artist-descp .artist-perf a.check {
     background-color: var(--accent-clr);
     color: var(--white-clr);
     padding: .5rem;
@@ -217,12 +210,10 @@ main .mainContent .artist-perf a {
 
 .mainContent .artist-work .images img {
     border-radius: 20px;
-    width: 100%;
-    height: auto;
-    border: 1px solid black;
 }
 
-.mainContent .artist-work .images img:nth-of-type(1) {
+.mainContent .artist-work .images img:nth-of-type(1),
+.mainContent .artist-work .images img:nth-of-type(2) {
     grid-column: 1/-1;
 }
 
@@ -514,7 +505,7 @@ main .calendar-main .table-content {
 @media screen and (min-width: 900px) {
     .headerContent .navbar .menuBtn {
         display: none;
-
+       
     }
 
     nav {
@@ -545,9 +536,21 @@ main .calendar-main .table-content {
     .mainContent .artist-work {
         grid-column: 1;
         grid-row: 1;
+        min-height: 610px;
     }
 
-    main .mainContent .about-artist ul li {
+    .mainContent .artist-descp {
+        min-height: 610px;
+    }
+
+    main .mainContent .artist-descp {
+        margin-bottom: 0;
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: space-around;
+    }
+
+    main .mainContent .artist-descp .about-artist ul li {
         margin-bottom: 1rem;
     }
 
@@ -558,28 +561,30 @@ main .calendar-main .table-content {
         margin: 2rem;
     }
 
-    .mainContent .artist-perf {
+    .mainContent .artist-descp .artist-perf {
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 1rem;
     }
 
-    .mainContent .artist-perf h3,
-    .mainContent .artist-perf p {
+    .mainContent .artist-descp .artist-perf h3,
+    .mainContent .artist-descp .artist-perf p {
         grid-column: 1/-1;
     }
 
-    .mainContent .artist-perf h3 {
+    .mainContent .artist-descp .artist-perf h3 {
         margin-bottom: 0;
     }
 
-    .mainContent .artist-perf a.edit {
+    .mainContent .artist-descp .artist-perf a.check {
         margin-bottom: 0;
         margin-top: 0;
     }
 
-    .mainContent .artist-perf a.edit {
-        grid-column: 1/-1;
+    .mainContent .artist-descp .artist-perf a.check,
+    .mainContent .artist-descp .artist-perf a.book-artist {
+        width: 140px;
+
     }
 
     main .artist-reviews {
@@ -595,6 +600,20 @@ main .calendar-main .table-content {
     main .artist-reviews .review-list {
         margin: 0;
         width: 100%;
+    }
+
+    main .mainContent .artist-descp {
+        box-shadow: 0px 0px 0px;
+        border: transparent;
+    }
+
+    .mainContent .artist-descp .about-artist {
+        box-shadow: grey 2px 2px 10px;
+        border-radius: 25px;
+        padding: 2rem 1rem;
+        margin-top: -4rem;
+        /* min-height: 320px; */
+        align-content: flex-start;
     }
 
 
