--- a/css/account-orgraniser.css
+++ b/css/account-orgraniser.css
@@ -22,11 +22,15 @@ body {
 
 main {
     text-align: center;
-    padding: 1rem;
 }
 
 
 /* ========= Section 01 */
+
+.profile{
+    margin: 0 1rem;
+}
+
 .profile-div {
     box-shadow: grey 2px 2px 10px;
     border-radius: 25px;
@@ -94,21 +98,28 @@ main {
 }
 
 /* ========= Section 02 */
-.feature-banner-div {
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    /* max-height: 220px; */
+.featuredArtist{
     max-width: 100%;
     background-image: var(--banner-gradient);
-    align-items: center;
-    margin: 2rem 0;
-    padding: 0 3rem;
 }
 
-
+.feature-banner-div {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 0.2rem;
+    max-width: 1000px;
+    margin: auto;
+    padding: 0 1rem;
+}
 
 .feature-banner-div h3 {
     color: var(--white-clr);
+}
+
+.promoteArtist {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;  
 }
 
 .user-artist-profile {
@@ -117,30 +128,31 @@ main {
 }
 
 .user-artist-profile img {
-    width: 100px;
-    height: 100px;
+    width: 110px;
+    height: 110px;
     border-radius: 100px;
-    margin: .5rem;
 }
 
 .user-artist-profile p {
     margin-block-start: 0;
+    margin: 0.5 0;
 }
 
-.promoteArtist {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    /* justify-content: space-around; */
-}
+
 
 /* ============= Section 03 */
+.hired{
+    display: grid;
+    gap: 1rem;
+}
+
 .hiredContent {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 1fr;
     margin: auto;
-    max-width: 800px;
-    margin-bottom: 5rem;
+    max-width: 1000px;
+    margin-bottom: 4rem;
+    justify-items: center;
 }
 
 ul {
@@ -165,7 +177,6 @@ img {
     padding: 1rem;
     margin-bottom: 1.5rem;
     max-width: 270px;
-    margin-right: 1rem;
 }
 
 .artist-descp .artist-briefing img {
@@ -244,6 +255,38 @@ img {
     grid-column: 1/-1;
 }
 
+@media screen and (min-width: 750px) {
+
+    /*section 02*/
+    .feature-banner-div {
+        grid-template-columns: 1fr 3fr;
+        gap: 0.5rem;
+        padding: 0 3rem;
+    }
+
+    .feature-banner-div h3{
+        align-self: center;
+    }
+
+    .promoteArtist {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        padding: 1rem 0 0 0;
+    }
+
+/*section 03*/
+    .hiredContent {
+        grid-template-columns: 1fr 1fr;
+    }
+
+}
+
+@media screen and (min-width: 950px) {
+    .hiredContent {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+}
+/*
 @media screen and (max-width: 950px) {
     .hiredContent {
         display: grid;
@@ -268,7 +311,7 @@ img {
     }
 
 
-}
+}*/
 
 
 
