--- a/css/signup.css
+++ b/css/signup.css
@@ -92,3 +92,197 @@ display: block;
 width: 100px;
 height: auto;
 }
+.mainContent, .headerContent, .footerContent, .artist-reviews{
+    max-width: 1000px;
+    margin: auto;
+}
+
+h1, h2, h3{
+    font-family: Oswald;
+    font-weight: normal;
+}
+img {
+max-width: 100%;
+height: auto;
+display: block;
+}
+ul{
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+a{
+    text-decoration: none;
+    color: black;
+}
+header .site-heading img{
+width: 50px;
+height: auto;
+}
+
+nav{
+    display: none;
+}
+
+.headerContent .navbar .search a, .headerContent .navbar .menuBtn a{
+    color: var(--white-clr);
+}
+.headerContent .navbar .menuBtn a{
+    color: var(--accent-clr);
+}
+
+header{
+    background:var(--gradient);
+    border-radius: 0 0 20px 20px;
+
+    padding: 1rem;
+    color: var(--white-clr);
+}
+header .headerContent .site-heading{
+    display: grid;
+    grid-template-columns: 1fr;
+    align-items: center;
+}
+header .headerContent .site-heading img, header .headerContent .site-heading h1{
+    grid-row: 1;
+    grid-column: 1;
+}
+header .headerContent .site-heading h1{
+    margin-left: 3.5rem;
+    align-items: center;
+    font-size: 1.5rem;
+    font-weight: normal;
+}
+.headerContent h2{
+    font-weight: normal;
+}
+.headerContent h2 span{
+    color: var(--accent-clr);
+}
+.headerContent{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+.headerContent .navbar{
+    display: flex;
+    gap: 1rem;
+    justify-content: end;
+    align-items: center;
+}
+nav ul li a:hover{
+    color: var(--accent-clr);
+    border-bottom: 1px solid var(--accent-clr);
+    transition: all .5s;
+}
+@media screen and (min-width: 700px) {
+    .headerContent .navbar .menuBtn{
+        display: none;
+    }
+    nav{
+        display: block;
+    }
+   
+    .headerContent .site-heading,  .headerContent .navbar{
+        grid-column: 1/span 2;
+        grid-row: 1/span 2;
+    }
+    nav ul li{
+        display: inline;
+    }
+    nav ul li a{
+        color: var(--white-clr);
+        margin-left: 1rem;
+    }
+}
+
+footer{
+    background:  linear-gradient(to bottom, #111415, #363a47);
+    color: var(--white-clr);
+    padding: 1rem;
+}
+.footerContent{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 2rem;
+}
+.footerContent a{
+    color: var(--white-clr);
+}
+
+.footerContent .footer-head{
+    text-align: center;
+    grid-column: span 2;
+}
+.footerContent .footer-head img{
+    margin: auto;
+    width: 70px;
+}
+.footerContent .footer-head .icons ul li{
+    display: inline;
+    margin: .3rem;
+}
+.footerContent .copyright{
+    grid-column: span 2;
+    text-align: center;
+}
+.footerContent .quick-links p, .footerContent .contact-us p{
+font-weight: 700;
+}
+.footerContent .quick-links ul li, .footerContent .contact-us ul li{
+    margin-bottom: .5rem;
+}
+
+
+
+
+@media screen and (min-width:700px) {
+    
+
+
+footer .footerContent {
+    grid-template-columns: repeat(4, 1fr);
+    gap: 2rem;
+}
+
+footer .footerContent .footer-head {
+    text-align: left;
+    display: grid;
+    gap: 1rem;
+}
+
+footer .footerContent .footer-head img {
+    margin: 0;
+
+}
+
+footer .footerContent .copyright {
+    grid-column: 1/ span 4;
+    text-align: center;
+
+    margin-top: 2rem;
+}
+}
+
+/* labels ------------------------ */
+
+main #signupForm{
+    margin: 1.5rem;
+    padding: 1rem;
+    /* border: 1px solid rgb(103, 103, 103); */
+    border-radius: 15px;
+    box-shadow: 4px 4px 5px rgba(174, 173, 173, 0.6);
+
+   
+}
+main #signupForm .labels{
+display: grid;
+
+}
+
+
+@media screen and (min-width:700px){
+    main #signupForm{
+        max-width: 1000px;
+        margin: 2rem auto;
+    } 
+}
