--- a/css/account-orgraniser.css
+++ b/css/account-orgraniser.css
@@ -35,7 +35,7 @@ main {
     box-shadow: grey 2px 2px 10px;
     border-radius: 25px;
     padding: 2rem 1rem;
-    max-width: 800px;
+    max-width: 1000px;
     margin: auto;
     margin-top: 3rem;
     margin-bottom: 3rem;
@@ -149,10 +149,12 @@ main {
 .hiredContent {
     display: grid;
     grid-template-columns: 1fr;
+    gap: 1rem;
     margin: auto;
     max-width: 1000px;
     margin-bottom: 4rem;
     justify-items: center;
+    padding: 0 1rem;
 }
 
 ul {
@@ -175,8 +177,7 @@ img {
     box-shadow: #797979 2px 5px 10px;
     border-radius: 25px;
     padding: 1rem;
-    margin-bottom: 1.5rem;
-    max-width: 270px;
+    text-align: left;
 }
 
 .artist-descp .artist-briefing img {
@@ -255,8 +256,14 @@ img {
     grid-column: 1/-1;
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 650px) {
+    /*section 03*/
+    .hiredContent {
+        grid-template-columns: 1fr 1fr;
+}
+}
 
+@media screen and (min-width: 750px) {
     /*section 02*/
     .feature-banner-div {
         grid-template-columns: 1fr 3fr;
@@ -271,11 +278,6 @@ img {
     .promoteArtist {
         grid-template-columns: 1fr 1fr 1fr 1fr;
         padding: 1rem 0 0 0;
-    }
-
-/*section 03*/
-    .hiredContent {
-        grid-template-columns: 1fr 1fr;
     }
 
 }
