--- a/css/account-orgraniser.css
+++ b/css/account-orgraniser.css
@@ -32,14 +32,22 @@ main {
 }
 
 .profile-div {
+    display: grid;
+    gap: 1rem;
     box-shadow: grey 2px 2px 10px;
     border-radius: 25px;
-    padding: 2rem 1rem;
+    padding: 0 1rem;
     max-width: 1000px;
     margin: auto;
     margin-top: 3rem;
     margin-bottom: 3rem;
     padding: 1rem;
+}
+
+.profile-div h1{
+    text-align: left;
+    padding-left: 1rem;
+    margin: 0;
 }
 
 .profile-div article {
@@ -67,12 +75,10 @@ main {
 }
 
 .addressSec {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-left: 1.5rem;
-    margin-right: 2rem;
-    margin-top: 1.5rem;
+    display: grid;
+    gap: 0.5rem;
+    text-align: left;
+    margin: 0 0 0 1rem;
 }
 
 .addressSec div {
@@ -86,10 +92,11 @@ main {
 }
 
 .addressSec button {
+    width: 150px;
     padding: .4rem 2rem;
-    border-radius: 5px;
+    border-radius: 15px;
     background-color: var(--accent-clr);
-    color: var(--white-clr);
+    color: var(--blacl-clr);
     border: none;
 }
 
@@ -137,8 +144,6 @@ main {
     margin-block-start: 0;
     margin: 0.5 0;
 }
-
-
 
 /* ============= Section 03 */
 .hired{
@@ -279,7 +284,25 @@ img {
         grid-template-columns: 1fr 1fr 1fr 1fr;
         padding: 1rem 0 0 0;
     }
+}
 
+@media screen and (min-width: 800px) {
+        /*section 01*/
+        .profile-div {
+            grid-template-columns: 1fr 1fr;
+        }
+    
+        .profile-div h1{
+            grid-column: span 2;
+        }
+    
+        .addressSec > div{
+            justify-self: start;
+        }
+
+        #editProfile {
+            justify-self: end;   
+        }
 }
 
 @media screen and (min-width: 950px) {
@@ -288,71 +311,3 @@ img {
     }
 
 }
-/*
-@media screen and (max-width: 950px) {
-    .hiredContent {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-    }
-}
-
-@media screen and (max-width: 480px) {
-    .feature-banner-div h3 {
-        grid-column: 1/-1;
-    }
-
-    .promoteArtist {
-        grid-column: 1/-1;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-    }
-
-    .hiredContent {
-        display: grid;
-        grid-template-columns: 1fr;
-    }
-
-
-}*/
-
-
-
-/* .user-data {
-    display: grid;
-    grid-template-columns: 1fr;
-}
-
-.portfolio-images {
-    display: flex;
-    flex-flow: row wrap;
-    gap: 1rem;
-    justify-content: center;
-}
-
-.label {
-    font-weight: bold;
-    justify-content: center;
-}
-
-.inputField {
-    padding: 10px;
-}
-
-#summary {
-    min-height: 100px;
-}
-
-#saveBtn {
-    padding: 10px;
-    margin-top: 20px;
-    cursor: pointer;
-    font-weight: bold;
-}
-
-.user-info {
-    display: grid;
-    grid-template-columns: 20% 1fr;
-    gap: 0.75rem;
-    text-align: start;
-    margin-top: 5rem;
-} */
