--- a/css/homepage.css
+++ b/css/homepage.css
@@ -5,6 +5,19 @@
     --accent-clr: #F37F81;
     --white-clr: white;
     --blacl-clr: black;
+
+    --h1-desktop: 46px;
+    --h1-mobile: 32px;
+    --h2-desktop: 41px;
+    --h2-mobile: 28px;
+    --h3-desktop: 30px;
+    --h3-mobile: 24px;
+    --h4-desktop: 20px;
+    --h4-mobile: 16px;
+    --font-size-body-desktop: 16px;
+    --font-size-body-mobile: 16px;
+
+    scroll-behavior: smooth;
 }
 
 body {
@@ -13,8 +26,8 @@ body {
     color: #fff;
     margin: 0;
     padding: 0;
-
 }
+
 
 header {
     max-width: 100%;
@@ -31,14 +44,14 @@ header {
 }
 
 .logo img {
-    height: 40px;
+    height: 70px;
     margin-right: 10px;
 }
 
 nav ul {
     list-style: none;
     display: flex;
-    gap: 20px;
+    /* gap: 20px; */
     margin: 0;
     padding: 0;
 }
@@ -626,9 +639,24 @@ footer {
     height: 100%;
 }
 
-.close-icon {
+.search-close-btn {
+    margin: 1rem;
     position: absolute;
     right: 0;
     top: 0;
-    padding: 20px;
+    background-color: transparent;
+    /* padding: 20px; */
+}
+
+.search-close-btn:hover {
+    background-color: var(--secondary-clr);
+}
+
+.search-close-btn i {
+    color: white;
+    font-size: 2rem;
+}
+
+.myHeader {
+    width: 100%;
 }
