--- a/css/chat.css
+++ b/css/chat.css
@@ -42,14 +42,15 @@ main {
     margin-top: 0;
 }
 
-.chatSideBar .highlight {
+#chat-list .highlight {
     background-color: var(--secondary-clr);
+    color: white;
 }
 
 #chat-list p {
     cursor: pointer;
-    border-bottom: 1px solid black;
-    /* border-radius: 10px; */
+    border-bottom: 1px solid white;
+    border-radius: 5px;
     background-color: rgb(240, 240, 240);
     padding: .5rem;
     overflow: hidden;
