fix for artist name not displaying on search result cards and artist portfolio screen

--- a/templates/search-result-artist-template.html
+++ b/templates/search-result-artist-template.html
@@ -12,9 +12,10 @@
                 </div>
     
                 <ul>
-                    <li>Pricing starts at: <span id="pricing">$ 125</span></li>
-                    <li>Pick me for: <span id="category">Rock and Jazz</span></li>
-                    <li>Location: <span id="location">Vancouvver, BC</span></li>
+                    <li>Artist Name: <span id="name"></span><li>
+                    <li>Pricing starts at: <span id="pricing"></span></li>
+                    <li>Pick me for: <span id="category"></span></li>
+                    <li>Location: <span id="location"></span></li>
                 </ul>
     
             </div>
