fix for navigation search for all pages

--- a/css/account-artist.css
+++ b/css/account-artist.css
@@ -40,6 +40,13 @@ img {
     display: block;
 }
 
+.search-container {
+    display: none;
+}
+#search {
+    cursor: pointer;
+}
+
 ul {
     padding: 0;
     margin: 0;
