--- a/css/chat.css
+++ b/css/chat.css
@@ -23,6 +23,14 @@ main {
     padding: 1rem;
 }
 
+.search-container {
+    display: none;
+}
+
+#search {
+    cursor: pointer;
+}
+
 .chat-content-wrapper {
     /* display: flex;
     flex-flow: column wrap; */
