--- a/css/search-result.css
+++ b/css/search-result.css
@@ -53,6 +53,13 @@ main {
         border-radius: 25px;
 }
 
+.search-container {
+    display: none;
+}
+#search {
+    cursor: pointer;
+}
+
 .artist-descp {
     align-self: flex-start;
     flex: 1;
