UI fixes for offline page and minor UI changes

--- a/css/search-result.css
+++ b/css/search-result.css
@@ -91,6 +91,7 @@ main {
     flex-flow: row nowrap;
     gap: 1rem;
     align-items: center;
+    margin-bottom: 1rem;
 }
 
 .artist-descp .icons-grp {
