--- a/templates/search-result-artist-template.html
+++ b/templates/search-result-artist-template.html
@@ -5,7 +5,7 @@
             <div class="about-artist">
     
                 <div class="artist-briefing">
-                    <img id="profile_pic" src="../src/hector-bermudez-iIWDt0fXa84-unsplash.jpg" alt="">
+                    <img id="profile_pic" src="../src/person.png" alt="">
                     <p id="summary">Jonh Doe is a dinamyc and versatile guitarist known for his electrifying performances and
                         soulful
                         sound.</p>
